# inrol_sim_cablewinding

./: CMakeLists.txt  LICENSE  README.md
data/: R_des.txt  p_des.txt
include/: dll_cable.h  draw.h  functions.h  precompiled.h
src/: main.cpp
